--- a/style.css
+++ b/style.css
@@ -99,92 +99,28 @@ h1 {
     line-height: 1.5;
     padding-bottom: 0.6rem;
 }
+footer {
+    display: flex;
+    justify-content: center;
+    width: 310px;
+    text-align: center;
+    font-size: 0.8rem;
+    position: relative;
+    /*     bottom: 140px; */
+}
 
-/*main {*/
-/*    position: relative;*/
+.credit {
+    width: 310px;
+    text-align: center;
+    font-size: 0.8rem;
+    position: relative;
+    bottom: 140px;
+}
 
-/*}*/
-
-/*.card {*/
-/*    background-color: #ffffff;*/
-/*    border-radius: 25px;*/
-/*    position: relative;*/
-/*    justify-content: center;*/
-/*    margin: 0 15px;*/
-/*    top: 150px;*/
-/*    display: flex;*/
-/*}*/
-
-/*figure {*/
-/*    display: block;*/
-/*    position: relative;*/
-/*    bottom: 125px;*/
-/*}*/
-
-/*#womanOnlineImage {*/
-/*    font-size: 1.5rem;*/
-/*}*/
-
-/*#boxShadow {*/
-/*    position: relative;*/
-/*    bottom: 76px;*/
-/*    right: 1px;*/
-/*    font-size: inherit;*/
-/*}*/
-
-/*.faqContainer {*/
-/*    position: relative;*/
-/*    bottom: 200px;*/
-/*    text-align: center;*/
-/*    display: flex;*/
-/*}*/
-
-/*h1 {*/
-/*    display: block;*/
-/*    text-align: center;*/
-/*    font-size: 2.1rem;*/
-/*    text-transform: uppercase;*/
-/*    font-weight: 700;*/
-/*}*/
-
-/*.accordion {*/
-/*    justify-content: center;*/
-
-/*}*/
-
-/*.questionContainer {*/
-/*    padding-left: 12px;*/
-/*    margin: 0 auto;*/
-/*}*/
-
-/*.toggle {*/
-/*    padding-top: 1rem;*/
-/*    padding-bottom: 1rem;*/
-/*    line-height: 1.5;*/
-/*    background: none;*/
-/*    border: none;*/
-/*    font-size: 0.9rem;*/
-/*    font-weight: 600;*/
-/*    width: 82%;*/
-/*    text-align: left;*/
-/*    white-space: nowrap;*/
-/*}*/
-
-/*.arrowDown {*/
-/*    margin-left: 10px;*/
-/*}*/
-
-/*.panel {*/
-/*    border-bottom: 1px solid #E8E8EA;*/
-/*    overflow: hidden;*/
-/*    margin: 0 20px 0 20px;*/
-/*    max-width: 83%;*/
-/*}*/
-
-/*.content {*/
-/*    display: none;*/
-/*    color: #787887;*/
-/*    font-size: 0.85rem;*/
-/*    line-height: 1.5;*/
-/*    padding-bottom: 0.6rem;*/
-/*}*/
+.githubLink {
+    position: relative;
+    bottom: 110px;
+    right: 100px;
+    font-size: 15px;
+    color: black;
+}
