--- a/style.css
+++ b/style.css
@@ -14,16 +14,16 @@ body {
 }
 
 main {
-    align-content: center;
+    display: flex;
 }
 
 .card {
     background-color: #ffffff;
     width: 327px;
     height: 535px;
-    max-width: 360px;
     border-radius: 25px;
     position: relative;
+    top: 110px;
     padding-inline: 1.5rem .5rem;
     padding-block: 9rem 3rem;
 }
@@ -34,9 +34,7 @@ main {
     width: 268px;
     height: 180px;
     position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-55%, -55%);
+    transform: translate( 10%, -140%);
 }
 
 .card::after {
@@ -45,36 +43,39 @@ main {
     width: 268px;
     height: 180px;
     position: absolute;
-    top: 6.5rem;
+    top: 6rem;
     left: 50%;
-    transform: translate(-45%, -53%);
+    transform: translate(-42%, -53%);
 }
 
 
-@keyframes boxHop {
-    from {
-        transform: translate(-55%, -55%);
-    }
-    50% {
-        transform: translate(-55%, -57.5%);
-    }
-    to {
-        transform: translate( -55% ,-55%);
-    }
-}
+/*@keyframes boxHop {*/
+/*    from {*/
+/*        transform: translate(-55%, -55%);*/
+/*    }*/
+/*    50% {*/
+/*        transform: translate(-55%, -57.5%);*/
+/*    }*/
+/*    to {*/
+/*        transform: translate( -55% ,-55%);*/
+/*    }*/
+/*}*/
 
 
 h1 {
+    position: relative;
+    bottom: 35px;
     display: block;
     text-align: center;
     font-size: 2.1rem;
     text-transform: uppercase;
-    font-weight: 400;
 }
 
 .questionContainer {
-
+    position: relative;
+    bottom: 45px;
 }
+
 
 .questionTitleAndButton {
     display: flex;
@@ -89,51 +90,50 @@ h1 {
     cursor: pointer;
 }
 
-.questionTitleAndButton::after {
-    content: "";
-    display: block;
-    width: 95%;
-    height: 1px;
-    position: absolute;
-    bottom: 0;
-}
+/*.questionTitleAndButton::after {*/
+/*    content: "";*/
+/*    display: block;*/
+/*    width: 95%;*/
+/*    height: 1px;*/
+/*    position: absolute;*/
+/*    bottom: 0;*/
+/*}*/
 
 .questionTitle {
     font-size: .8rem;
+    font-weight: 400;
     line-height: 1.3;
 }
 
 .questionToggle {
-    border: 0;
+    border: none;
     background: inherit;
     padding: 1rem;
     cursor: pointer;
 }
-
-/* ANSWERS */
 
 .answerContainer {
     display: none;
     position: relative;
 }
 
-.answerContainer:before {
-    content: "";
-    display: block;
-    width: 112%;
-    height: 1px;
-    position: absolute;
-    bottom: 0;
-}
-
-/* TOGGLE STYLES */
+/*.answerContainer:before {*/
+/*    content: "";*/
+/*    display: block;*/
+/*    width: 112%;*/
+/*    height: 1px;*/
+/*    position: absolute;*/
+/*    bottom: 0;*/
+/*}*/
 
 .show-text .answerContainer {
     display: block;
     font-size: .765rem;
+    font-weight: 300;
     line-height: 1.7;
     width: 85%;
-    padding-block-end: 1rem;
+    margin-top: -10px;
+    margin-bottom: -10px;
 }
 
 .show-text .questionToggle {
@@ -141,67 +141,85 @@ h1 {
 }
 
 .show-text .questionTitleAndButton {
-    font-weight: 700;
-    color: var(--clr-primary-blue);
+    color: #20223d;
 }
 
-.show-text .questionTitleAndButton::after {
-    display: none;
+/*.show-text .questionTitleAndButton::after {*/
+/*    display: none;*/
+/*}*/
+
+footer {
+    display: block;
+    width: 310px;
+    text-align: center;
+    font-size: 0.7rem;
+    position: relative;
+    top: 80px;
+}
+
+.credit {
+    width: 310px;
+    text-align: center;
+}
+
+.githubLink {
+    font-size: 15px;
+    color: black;
 }
 
 /* MEDIA QUERIES */
 
-@media screen and (min-width: 650px) {
+/*@media screen and (min-width: 650px) {*/
 
-    .main {
-        max-width: 500px;
-    }
-}
+/*    .main {*/
+/*        max-width: 500px;*/
+/*    }*/
+/*}*/
 
-@media screen and (min-width: 900px) {
+/*@media screen and (min-width: 900px) {*/
 
-    .main {
-        height: 510px;
-        max-width: 925px;
-        display: flex;
-        justify-content: flex-end;
-        background: white url(./Assets/illustration-woman-online-desktop.svg), url(./Assets/bg-pattern-desktop.svg) no-repeat no-repeat bottom 3.1rem left -5.1rem bottom -10rem left -36rem;
-    }
+/*    .main {*/
+/*        height: 510px;*/
+/*        max-width: 925px;*/
+/*        display: flex;*/
+/*        justify-content: flex-end;*/
+/*        background: white url(./Assets/illustration-woman-online-desktop.svg), url(./Assets/bg-pattern-desktop.svg) no-repeat no-repeat bottom 3.1rem left -5.1rem bottom -10rem left -36rem;*/
+/*    }*/
 
-    main::before {
-        content: "";
-        background: url(./Assets/illustration-box-desktop.svg) no-repeat;
-        width: 140px;
-        height: 190px;
-        position: absolute;
-        top: 66%;
-        left: -1.6%;
-        transform: translate(-55%, -55%);
-        animation: boxHop 2s ease-in-out;
-        animation-iteration-count: infinite;
-    }
+/*    main::before {*/
+/*        content: "";*/
+/*        background: url(./Assets/illustration-box-desktop.svg) no-repeat;*/
+/*        width: 140px;*/
+/*        height: 190px;*/
+/*        position: absolute;*/
+/*        top: 66%;*/
+/*        left: -1.6%;*/
+/*        transform: translate(-55%, -55%);*/
+/*        animation: boxHop 2s ease-in-out;*/
+/*        animation-iteration-count: infinite;*/
+/*    }*/
 
-    main::after {
-        display: none;
-    }
+/*    main::after {*/
+/*        display: none;*/
+/*    }*/
 
-    .questionContainer {
-        width: 50%;
-        padding-block-start: 4.5rem;
-        padding-inline-end: 5rem;
-    }
+/*    .questionContainer {*/
+/*        width: 50%;*/
+/*        padding-block-start: 4.5rem;*/
+/*        padding-inline-end: 5rem;*/
+/*    }*/
 
-    .questionTitleAndButton {
-        text-align: left;
-        padding-block-end: 1.5rem;
-        font-size: 2.2rem;
-    }
+/*    .questionTitleAndButton {*/
+/*        text-align: left;*/
+/*        padding-block-end: 1.5rem;*/
+/*        font-size: 2.2rem;*/
+/*    }*/
 
-    .questionContainer {
-        font-weight: 400;
-    }
+/*    .questionContainer {*/
+/*        font-weight: 400;*/
+/*    }*/
 
-    .questionTitleAndButton p {
-        font-size: .9rem;
-    }
-}
+/*    .questionTitleAndButton p {*/
+/*        font-size: .9rem;*/
+/*    }*/
+/*}*/
