--- a/style.css
+++ b/style.css
@@ -20,10 +20,11 @@ main {
 .card {
     background-color: #ffffff;
     width: 327px;
-    height: 535px;
+    height: 545px;
     border-radius: 25px;
     position: relative;
-    top: 110px;
+    top: 70px;
+    transform: translate(0%, 10%);
     padding-inline: 1.5rem .5rem;
     padding-block: 9rem 3rem;
 }
@@ -64,7 +65,7 @@ main {
 
 h1 {
     position: relative;
-    bottom: 35px;
+    bottom: 45px;
     display: block;
     text-align: center;
     font-size: 2.1rem;
@@ -73,9 +74,19 @@ h1 {
 
 .questionContainer {
     position: relative;
-    bottom: 45px;
+    bottom: 55px;
+    padding: 3px 0;
 }
 
+.questionContainer::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 1px;
+    width: 95%;
+    border-bottom: 1px solid #00000029;
+}
 
 .questionTitleAndButton {
     display: flex;
@@ -83,6 +94,7 @@ h1 {
     position: relative;
     align-items: center;
     transition: color .15s ease-in-out;
+    width: 300px;
 }
 
 .questionTitleAndButton:hover {
@@ -90,14 +102,16 @@ h1 {
     cursor: pointer;
 }
 
-/*.questionTitleAndButton::after {*/
-/*    content: "";*/
-/*    display: block;*/
-/*    width: 95%;*/
-/*    height: 1px;*/
-/*    position: absolute;*/
-/*    bottom: 0;*/
-/*}*/
+
+/*delete??*/
+.questionTitleAndButton::after {
+    content: "";
+    display: block;
+    width: 95%;
+    height: 1px;
+    position: absolute;
+    bottom: 0;
+}
 
 .questionTitle {
     font-size: .8rem;
@@ -117,14 +131,14 @@ h1 {
     position: relative;
 }
 
-/*.answerContainer:before {*/
-/*    content: "";*/
-/*    display: block;*/
-/*    width: 112%;*/
-/*    height: 1px;*/
-/*    position: absolute;*/
-/*    bottom: 0;*/
-/*}*/
+.answerContainer:before {
+    content: "";
+    display: block;
+    width: 112%;
+    height: 1px;
+    position: absolute;
+    bottom: 0;
+}
 
 .show-text .answerContainer {
     display: block;
@@ -144,17 +158,18 @@ h1 {
     color: #20223d;
 }
 
-/*.show-text .questionTitleAndButton::after {*/
-/*    display: none;*/
-/*}*/
+/*delete???*/
+.show-text .questionTitleAndButton::after {
+    display: none;
+}
 
 footer {
     display: block;
     width: 310px;
     text-align: center;
     font-size: 0.7rem;
-    position: relative;
-    top: 80px;
+    position: absolute;
+    transform: translate(0%, 800%);
 }
 
 .credit {
@@ -164,17 +179,48 @@ footer {
 
 .githubLink {
     font-size: 15px;
-    color: black;
+    color: #000000;
 }
 
-/* MEDIA QUERIES */
+@media (min-height: 450px) {
+    .card {
+        transform: translate(0%, 1%);
+    }
+    footer {
+        transform: translate(0%, 720%)
+    }
+}
+@media (min-height: 700px) {
+    .card {
+        transform: translate(0%, -10%);
+    }
+    footer {
+        transform: translate(0%, 600%)
+    }
+}
+@media screen and (min-width: 600px) {
 
-/*@media screen and (min-width: 650px) {*/
+    .card {
+        width: 400px;
+        padding-inline: 2.1rem 1.5rem;
 
-/*    .main {*/
-/*        max-width: 500px;*/
-/*    }*/
-/*}*/
+    }
+
+    .card::before {
+        transform: translate( 22%, -140%);
+    }
+
+    .questionTitleAndButton {
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        align-items: center;
+        transition: color .15s ease-in-out;
+        width: 350px;
+    }
+
+
+}
 
 /*@media screen and (min-width: 900px) {*/
 
