--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ main {
     height: 180px;
     position: absolute;
     transform: translate( 10%, -140%);
+    z-index: 2;
 }
 
 .card::after {
@@ -47,21 +48,8 @@ main {
     top: 6rem;
     left: 50%;
     transform: translate(-42%, -53%);
+    z-index: 1;
 }
-
-
-/*@keyframes boxHop {*/
-/*    from {*/
-/*        transform: translate(-55%, -55%);*/
-/*    }*/
-/*    50% {*/
-/*        transform: translate(-55%, -57.5%);*/
-/*    }*/
-/*    to {*/
-/*        transform: translate( -55% ,-55%);*/
-/*    }*/
-/*}*/
-
 
 h1 {
     position: relative;
@@ -100,17 +88,6 @@ h1 {
 .questionTitleAndButton:hover {
     color: #f47c57;
     cursor: pointer;
-}
-
-
-/*delete??*/
-.questionTitleAndButton::after {
-    content: "";
-    display: block;
-    width: 95%;
-    height: 1px;
-    position: absolute;
-    bottom: 0;
 }
 
 .questionTitle {
@@ -182,6 +159,18 @@ footer {
     color: #000000;
 }
 
+@keyframes boxHop {
+    from {
+        transform: translate(-55%, -55%);
+    }
+    50% {
+        transform: translate(-55%, -57.5%);
+    }
+    to {
+        transform: translate( -55% ,-55%);
+    }
+}
+
 @media (min-height: 450px) {
     .card {
         transform: translate(0%, 1%);
@@ -203,11 +192,13 @@ footer {
     .card {
         width: 400px;
         padding-inline: 2.1rem 1.5rem;
-
     }
 
     .card::before {
-        transform: translate( 22%, -140%);
+        transform: translate(22%, -140%);
+    }
+    .card::after {
+        transform: translate(-40%, -54%)
     }
 
     .questionTitleAndButton {
@@ -219,53 +210,69 @@ footer {
         width: 350px;
     }
 
-
 }
 
-/*@media screen and (min-width: 900px) {*/
+@media screen and (min-width: 900px) {
 
-/*    .main {*/
-/*        height: 510px;*/
-/*        max-width: 925px;*/
-/*        display: flex;*/
-/*        justify-content: flex-end;*/
-/*        background: white url(./Assets/illustration-woman-online-desktop.svg), url(./Assets/bg-pattern-desktop.svg) no-repeat no-repeat bottom 3.1rem left -5.1rem bottom -10rem left -36rem;*/
-/*    }*/
+    .card {
+        height: 510px;
+        width: 800px;
+        top: 10px;
+        background:
+                url(./Assets/illustration-woman-online-desktop.svg) bottom 3.1rem left -5.1rem no-repeat,
+                url(./Assets/bg-pattern-desktop.svg) bottom -10rem left -36rem no-repeat;
+        background-color: #ffffff;
+    }
 
-/*    main::before {*/
-/*        content: "";*/
-/*        background: url(./Assets/illustration-box-desktop.svg) no-repeat;*/
-/*        width: 140px;*/
-/*        height: 190px;*/
-/*        position: absolute;*/
-/*        top: 66%;*/
-/*        left: -1.6%;*/
-/*        transform: translate(-55%, -55%);*/
-/*        animation: boxHop 2s ease-in-out;*/
-/*        animation-iteration-count: infinite;*/
-/*    }*/
+    .card::before {
+        content: "";
+        background: url(./Assets/illustration-box-desktop.svg) no-repeat;
+        width: 140px;
+        height: 190px;
+        position: absolute;
+        top: 66%;
+        left: -1.6%;
+        transform: translate(-55%, -55%);
+        animation: boxHop 2s ease-in-out;
+        animation-iteration-count: infinite;
+    }
 
-/*    main::after {*/
-/*        display: none;*/
-/*    }*/
+    .card::after {
+        display: none;
+    }
 
-/*    .questionContainer {*/
-/*        width: 50%;*/
-/*        padding-block-start: 4.5rem;*/
-/*        padding-inline-end: 5rem;*/
-/*    }*/
+    h1 {
+        transform: translate(10%, -120%);
+    }
 
-/*    .questionTitleAndButton {*/
-/*        text-align: left;*/
-/*        padding-block-end: 1.5rem;*/
-/*        font-size: 2.2rem;*/
-/*    }*/
+    .questionContainer {
+        left: 410px;
+        bottom: 100px;
+        width: 50%;
+        padding-right: 10px;
+    }
 
-/*    .questionContainer {*/
-/*        font-weight: 400;*/
-/*    }*/
+    .questionContainer::before {
+        width: 85%;
+    }
 
-/*    .questionTitleAndButton p {*/
-/*        font-size: .9rem;*/
-/*    }*/
-/*}*/
+    footer {
+        transform: translate(0%, 480%);
+    }
+
+    @media screen and (min-width: 1000px) {
+        .card {
+            width: 900px;
+        }
+        h1 {
+            transform: translate(8%, -120%);
+
+        }
+        .questionContainer {
+            left: 450px;
+        }
+        .questionContainer::before {
+            width: 80%;
+        }
+
+    }
