--- a/style.css
+++ b/style.css
@@ -13,9 +13,6 @@ body {
     place-items: center;
 }
 
-main {
-    display: flex;
-}
 
 .card {
     background-color: #ffffff;
@@ -24,7 +21,6 @@ main {
     border-radius: 25px;
     position: relative;
     top: 70px;
-    transform: translate(0%, 10%);
     padding-inline: 1.5rem .5rem;
     padding-block: 9rem 3rem;
 }
@@ -35,7 +31,7 @@ main {
     width: 268px;
     height: 180px;
     position: absolute;
-    transform: translate( 10%, -140%);
+    transform: translate(10%, -140%);
     z-index: 2;
 }
 
@@ -45,7 +41,7 @@ main {
     width: 268px;
     height: 180px;
     position: absolute;
-    top: 6rem;
+    top: 96px;
     left: 50%;
     transform: translate(-42%, -53%);
     z-index: 1;
@@ -79,10 +75,8 @@ h1 {
 .questionTitleAndButton {
     display: flex;
     justify-content: space-between;
-    position: relative;
     align-items: center;
     transition: color .15s ease-in-out;
-    width: 300px;
 }
 
 .questionTitleAndButton:hover {
@@ -96,6 +90,7 @@ h1 {
     line-height: 1.3;
 }
 
+
 .questionToggle {
     border: none;
     background: inherit;
@@ -105,24 +100,14 @@ h1 {
 
 .answerContainer {
     display: none;
-    position: relative;
-}
-
-.answerContainer:before {
-    content: "";
-    display: block;
-    width: 112%;
-    height: 1px;
-    position: absolute;
-    bottom: 0;
 }
 
 .show-text .answerContainer {
     display: block;
-    font-size: .765rem;
+    font-size: .75rem;
     font-weight: 300;
     line-height: 1.7;
-    width: 85%;
+    width: 90%;
     margin-top: -10px;
     margin-bottom: -10px;
 }
@@ -132,10 +117,10 @@ h1 {
 }
 
 .show-text .questionTitleAndButton {
-    color: #20223d;
+    color: #030522;
 }
 
-/*delete???*/
+
 .show-text .questionTitleAndButton::after {
     display: none;
 }
@@ -151,13 +136,15 @@ footer {
 
 .credit {
     width: 310px;
+    color: #ffffff;
     text-align: center;
 }
 
 .githubLink {
-    font-size: 15px;
-    color: #000000;
+    font-size: 1rem;
+    color: #ffffff;
 }
+
 
 @keyframes boxHop {
     from {
@@ -167,26 +154,32 @@ footer {
         transform: translate(-55%, -57.5%);
     }
     to {
-        transform: translate( -55% ,-55%);
+        transform: translate(-55%, -55%);
     }
 }
+
 
 @media (min-height: 450px) {
     .card {
         transform: translate(0%, 1%);
     }
+
     footer {
         transform: translate(0%, 720%)
     }
 }
+
 @media (min-height: 700px) {
     .card {
         transform: translate(0%, -10%);
     }
+
     footer {
         transform: translate(0%, 600%)
     }
 }
+
+
 @media screen and (min-width: 600px) {
 
     .card {
@@ -197,16 +190,12 @@ footer {
     .card::before {
         transform: translate(22%, -140%);
     }
+
     .card::after {
         transform: translate(-40%, -54%)
     }
 
     .questionTitleAndButton {
-        display: flex;
-        justify-content: space-between;
-        position: relative;
-        align-items: center;
-        transition: color .15s ease-in-out;
         width: 350px;
     }
 
@@ -218,9 +207,8 @@ footer {
         height: 510px;
         width: 800px;
         top: 10px;
-        background:
-                url(./Assets/illustration-woman-online-desktop.svg) bottom 3.1rem left -5.1rem no-repeat,
-                url(./Assets/bg-pattern-desktop.svg) bottom -10rem left -36rem no-repeat;
+        background: url(./Assets/illustration-woman-online-desktop.svg) bottom 3.1rem left -5.1rem no-repeat,
+        url(./Assets/bg-pattern-desktop.svg) bottom -10rem left -36rem no-repeat;
         background-color: #ffffff;
     }
 
@@ -253,7 +241,7 @@ footer {
     }
 
     .questionContainer::before {
-        width: 85%;
+        width: 90%;
     }
 
     footer {
@@ -264,15 +252,18 @@ footer {
         .card {
             width: 900px;
         }
+
         h1 {
             transform: translate(8%, -120%);
 
         }
+
         .questionContainer {
             left: 450px;
         }
+
         .questionContainer::before {
             width: 80%;
         }
-
     }
+}
