--- a/style.css
+++ b/style.css
@@ -130,9 +130,10 @@ footer {
     width: 310px;
     text-align: center;
     font-size: 0.7rem;
-    position: absolute;
+    position: relative;
     padding-bottom: 10px;
-    top: 210px;
+    bottom: 20px;
+
 }
 
 .credit {
@@ -148,7 +149,6 @@ footer {
 }
 
 
-
 @keyframes boxHop {
     from {
         transform: translate(-55%, -55%);
@@ -162,26 +162,37 @@ footer {
 }
 
 
-@media (min-height: 450px) {
+@media (min-height: 350px) {
     .card {
-        transform: translate(0%, 1%);
+        top: 150px;
     }
 
     footer {
-        transform: translate(0%, 720%)
+        margin-top: 200px;
     }
 }
 
-@media (min-height: 700px) {
+@media (min-height: 400px) {
     .card {
-        transform: translate(0%, -10%);
+        top: 150px;
     }
 
     footer {
-        top: 250px;
+        margin-top: 120px;
     }
 }
 
+@media screen and (min-width: 200px) {
+    footer {
+        margin-top: 200px;
+    }
+}
+
+@media screen and (min-width: 250px) {
+    footer {
+        margin-top: 200px;
+    }
+}
 
 @media screen and (min-width: 600px) {
 
@@ -202,11 +213,6 @@ footer {
         width: 350px;
     }
 
-    footer {
-        transform: translate(0%, 680%);
-        padding-bottom: 15px;
-    }
-
 }
 
 @media screen and (min-width: 900px) {
@@ -214,7 +220,7 @@ footer {
     .card {
         height: 510px;
         width: 800px;
-        top: 0px;
+        top: 50px;
         background: url(./Assets/illustration-woman-online-desktop.svg) bottom 3.1rem left -5.1rem no-repeat,
         url(./Assets/bg-pattern-desktop.svg) bottom -10rem left -36rem no-repeat;
         background-color: #ffffff;
@@ -253,26 +259,25 @@ footer {
     }
 
     footer {
-        transform: translate(0%, 560%);
-        padding-bottom: 18px;
+        bottom: 130px;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .card {
+        width: 900px;
     }
 
-    @media screen and (min-width: 1000px) {
-        .card {
-            width: 900px;
-        }
+    h1 {
+        transform: translate(8%, -120%);
 
-        h1 {
-            transform: translate(8%, -120%);
+    }
 
-        }
+    .questionContainer {
+        left: 450px;
+    }
 
-        .questionContainer {
-            left: 450px;
-        }
-
-        .questionContainer::before {
-            width: 80%;
-        }
+    .questionContainer::before {
+        width: 80%;
     }
 }
